# framework-for-api-automation-main

./: .gitignore  QA_STRATEGY.md  README.md  pyproject.toml  pytest.ini
api/: __init__.py  client.py  endpoints.py
config/: settings.py
postman/: POSTMAN_COLLECTION_DOCUMENTATION.md  jsonplaceholder_posts_collection.json
scripts/: fetch_and_save_posts.py
tests/: conftest.py  schemas.py  test_api_suite.py  test_posts_api.py
utils/: __init__.py  api_reporter.py  file_writer.py  logger.py
